# ai-openai-agent-proready

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml
weather/: __init__.py  client.py
